@@ -1,3 +1,9 @@
+2010-08-09  Thomas Vander Stichele  <thomas at apestaart dot org>
+
+	* flumotion/component/producers/icecast/icecast.py:
+	  Make debug log messages on icecast server uniform so they're
+	  much easier to grep consistently.
+
 2010-08-04  Xavier Queralt  <xqueralt@flumotion.com>
 
 	* flumotion/component/feedcomponent.py:
